--- a/index.html
+++ b/index.html
@@ -805,9 +805,9 @@
         }
 
         .add-btn {
-            background: linear-gradient(45deg, var(--green-primary), var(--green-secondary));
-            color: var(--bg-primary);
-            border: 1px solid var(--green-primary);
+            background: var(--gradient-accent);
+            color: var(--text-inverse);
+            border: 1px solid var(--accent);
             font-weight: bold;
             text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
             transition: all 0.3s ease;
@@ -815,8 +815,9 @@
 
         .add-btn:hover {
             transform: translateY(-1px);
-            box-shadow: 0 3px 10px rgba(34, 139, 34, 0.4);
-            background: linear-gradient(45deg, var(--green-secondary), var(--green-accent));
+            box-shadow: var(--shadow-secondary);
+            background: var(--gradient-secondary);
+            border-color: var(--secondary);
         }
 
         .shortcut-list {
